--- a/web_dashboard/templates/dashboard.html
+++ b/web_dashboard/templates/dashboard.html
@@ -1,7 +1,108 @@
 {% extends 'base.html' %}
 
-{% block content %}
- 
+{% block content %} 
+<div class="wrapper d-flex"> 
+        <div class="sideMenu">
+            <div class="sidebar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-tachometer-alt" aria-hidden="true"></i>
+                        <span class="text">Dashboard</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
+                        <span class="text">Admin</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
+                        <span class="text">Users</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
+                        <span class="text">Drivers</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-suitcase" aria-hidden="true"></i>
+                        <span class="text">Trips</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chart-pie" aria-hidden="true"></i>
+                        <span class="text">Charts</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-star" aria-hidden="true"></i>
+                        <span class="text">Reviews</span>
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-map-marked-alt"></i>
+                        <span class="text">Location Fare</span>
+                    </a></li>                
+                </ul>
+            </div>
+        </div>
+      
+            <div class="container-fluid">
+                <div class="row">
+                   
+                    <div class="col-md-6 mb-2">
 
-    
+                        <!--Card-->
+                        <div class="card default-color-dark">
+                    
+                            <!--Card image-->
+                            <div class="view">
+                            <img src="/static/images/user-apartments.jpeg" class="card-img-top" alt="photo">
+                            <a href="#">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                            </div>
+                    
+                            <!--Card content-->
+                            <div class="card-body text-center">
+                            <!--Title-->
+                            <h4 class="card-title white-text">Users</h4>
+                            <!--Text-->                        
+                            </div>
+                    
+                        </div>
+                        <!--/.Card-->
+                    
+                        </div>
+                        <!-- Grid column -->
+                    
+                        <!-- Grid column -->
+                        <div class="col-md-6 mb-3">
+                    
+                        <!--Card-->
+                        <div class="card primary-color-dark">
+                    
+                            <!--Card image-->
+                            <div class="view">
+                            <img src="/static/images/drivers.jpeg" class="card-img-top" alt="photo">
+                            <a href="#">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                            </div>
+                    
+                            <!--Card content-->
+                            <div class="card-body text-center">
+                            <!--Title-->
+                            <h4 class="card-title white-text">Drivers</h4>
+                            </div>
+                    
+                        </div>
+                        <!--/.Card-->
+                    
+                        </div>
+                   
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <h3>Total Earnings</h3>
+                        <div class="earnings">
+                            <canvas id="doughnutChart1"></canvas>
+                        </div>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <h3>Total trips</h3>
+                        <div class="trips">
+                            <canvas id="doughnutChart2"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>     
+        
+    </div>
 {% endblock %}
