--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -1,10 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark info-color">
+<nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="#">Move Me</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-            width="24" height="24"
-            viewBox="0 0 172 172"
-            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#00adb5"><path d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z"></path></g></g></svg></span>
+        <span class="navbar-toggler-icon" aria-hidden="true" aria-expanded="false"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -43,32 +40,3 @@
     </div>
 </nav>
 
-<div class="wrapper d-flex"> 
-    <div class="sideMenu">
-        <div class="sidebar">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-tachometer-alt" aria-hidden="true"></i>
-                    <span class="text">Dashboard</span>
-                </a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
-                    <span class="text">Admin</span>
-                </a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
-                    <span class="text">Users</span>
-                </a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
-                    <span class="text">Drivers</span>
-                </a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-suitcase" aria-hidden="true"></i>
-                    <span class="text">Trips</span>
-                </a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-star" aria-hidden="true"></i>
-                    <span class="text">Reviews</span>
-                </a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-map-marked-alt"></i>
-                    <span class="text">Location Fare</span>
-                </a></li>
-            </ul>
-        </div>
-    </div>
-</div>
