--- a/web_dashboard/templates/dashboard.html
+++ b/web_dashboard/templates/dashboard.html
@@ -33,76 +33,76 @@
             </div>
         </div>
       
-            <div class="container-fluid">
-                <div class="row">
-                   
-                    <div class="col-md-6 mb-2">
+        <div class="container-fluid content">
+            <div class="row">
+                
+                <div class="col-md-6 mb-2">
 
-                        <!--Card-->
-                        <div class="card default-color-dark">
-                    
-                            <!--Card image-->
-                            <div class="view">
-                            <img src="/static/images/user-apartments.jpeg" class="card-img-top" alt="photo">
-                            <a href="#">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                            </div>
-                    
-                            <!--Card content-->
-                            <div class="card-body text-center">
-                            <!--Title-->
-                            <h4 class="card-title white-text">Users</h4>
-                            <!--Text-->                        
-                            </div>
-                    
+                    <!--Card-->
+                    <div class="card default-color-dark">
+                
+                        <!--Card image-->
+                        <div class="view">
+                        <img src="/static/images/user-apartments.jpeg" class="card-img-top" alt="photo">
+                        <a href="#">
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
                         </div>
-                        <!--/.Card-->
-                    
+                
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                        <!--Title-->
+                        <h4 class="card-title white-text">Users</h4>
+                        <!--Text-->                        
                         </div>
-                        <!-- Grid column -->
-                    
-                        <!-- Grid column -->
-                        <div class="col-md-6 mb-3">
-                    
-                        <!--Card-->
-                        <div class="card primary-color-dark">
-                    
-                            <!--Card image-->
-                            <div class="view">
-                            <img src="/static/images/drivers.jpeg" class="card-img-top" alt="photo">
-                            <a href="#">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                            </div>
-                    
-                            <!--Card content-->
-                            <div class="card-body text-center">
-                            <!--Title-->
-                            <h4 class="card-title white-text">Drivers</h4>
-                            </div>
-                    
-                        </div>
-                        <!--/.Card-->
-                    
-                        </div>
-                   
-                </div>
-                <div class="row">
-                    <div class="col-md-6 text-center">
-                        <h3>Total Earnings</h3>
-                        <div class="earnings">
-                            <canvas id="doughnutChart1"></canvas>
-                        </div>
+                
                     </div>
-                    <div class="col-md-6 text-center">
-                        <h3>Total trips</h3>
-                        <div class="trips">
-                            <canvas id="doughnutChart2"></canvas>
+                    <!--/.Card-->
+                
+                    </div>
+                    <!-- Grid column -->
+                
+                    <!-- Grid column -->
+                    <div class="col-md-6 mb-3">
+                
+                    <!--Card-->
+                    <div class="card primary-color-dark">
+                
+                        <!--Card image-->
+                        <div class="view">
+                        <img src="/static/images/drivers.jpeg" class="card-img-top" alt="photo">
+                        <a href="#">
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
                         </div>
+                
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                        <!--Title-->
+                        <h4 class="card-title white-text">Drivers</h4>
+                        </div>
+                
+                    </div>
+                    <!--/.Card-->
+                
+                    </div>
+                
+            </div>
+            <div class="row charts">
+                <div class="col-md-6 text-center">
+                    <h3>Total Earnings</h3>
+                    <div class="earnings">
+                        <canvas id="doughnutChart1"></canvas>
                     </div>
                 </div>
-            </div>     
+                <div class="col-md-6 text-center">
+                    <h3>Total trips</h3>
+                    <div class="trips">
+                        <canvas id="doughnutChart2"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>     
         
     </div>
 {% endblock %}
