--- a/web_dashboard/templates/base.html
+++ b/web_dashboard/templates/base.html
@@ -30,9 +30,13 @@
 </head>
 <body>
   {% include 'navbar.html' %}
-  
+
   {% block content %}
+
+ 
   {% endblock %}
+  {% include 'footer.html'%}
+ 
 
   {% block scripts %}
     {% bootstrap_javascript %}
