--- a/web_dashboard/templates/footer.html
+++ b/web_dashboard/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue">
+<footer class="page-footer font-small">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">&copy; 2019 Copyright:
