--- a/web_dashboard/templates/dashboard.html
+++ b/web_dashboard/templates/dashboard.html
@@ -5,10 +5,10 @@
         <div class="sideMenu">
             <div class="sidebar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-tachometer-alt" aria-hidden="true"></i>
+                    <li class="nav-item"><a href="{% url 'dashboard'%}" class="nav-link"><i class="fas fa-tachometer-alt" aria-hidden="true"></i>
                         <span class="text">Dashboard</span>
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
+                    <li class="nav-item"><a href="{% url 'admin-dash'%}" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
                         <span class="text">Admin</span>
                     </a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
