--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#" id="navbrand">Move Me</a>
+    <a class="navbar-brand" href="{% url 'dashboard'%}" id="navbrand">Move Me</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon" aria-hidden="true" aria-expanded="false"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-               <a class="nav-link waves-effect waves-light" href="#">Dashboard<span class="sr-only">(current)</span></a>
+               <a class="nav-link waves-effect waves-light" href="{% url 'dashboard'%}">Dashboard<span class="sr-only">(current)</span></a>
             </li>
         
             <li class="nav-item dropdown">
