--- a/web_dashboard/static/css/aisa.css
+++ b/web_dashboard/static/css/aisa.css
@@ -12,12 +12,6 @@ body{
   color: #00adb5;
   text-shadow:  2px 3px 3px #00adb5;
 }
-.navbar{
-  position: fixed;
-  top: 0;
-  width: 100%;
- 
-}
 .sideMenu,.navbar{
   background-color: #222831;  
 }
@@ -78,4 +72,31 @@ body{
 }
 .identity{
   color: #00adb5;
+}
+table.dataTable thead .sorting:after,
+table.dataTable thead .sorting:before,
+table.dataTable thead .sorting_asc:after,
+table.dataTable thead .sorting_asc:before,
+table.dataTable thead .sorting_asc_disabled:after,
+table.dataTable thead .sorting_asc_disabled:before,
+table.dataTable thead .sorting_desc:after,
+table.dataTable thead .sorting_desc:before,
+table.dataTable thead .sorting_desc_disabled:after,
+table.dataTable thead .sorting_desc_disabled:before {
+  bottom: .5em;
+}
+.table{
+  background-color: #eeeeee;
+  margin: 5%;
+}
+#user-title{
+  margin-top: 5%;
+  text-align: center;
+}
+.th-sm{
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.bottom-th{
+  font-weight: bold;
 }
