--- a/web_dashboard/templates/dashboard.html
+++ b/web_dashboard/templates/dashboard.html
@@ -11,10 +11,10 @@
                     <li class="nav-item"><a href="{% url 'admin-dash'%}" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
                         <span class="text">Admin</span>
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
+                    <li class="nav-item"><a href="{% url 'users'%}" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
                         <span class="text">Users</span>
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
+                    <li class="nav-item"><a href="{% url 'drivers'%}" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
                         <span class="text">Drivers</span>
                     </a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-suitcase" aria-hidden="true"></i>
