--- a/web/templates/welcome.html
+++ b/web/templates/welcome.html
@@ -1,3 +1,29 @@
+{% extends 'base.html'%}
+​
+{% block content %}
 
 
 <h1> Sign In</h1>
+<div class="row">
+    <div class="col-sm-6 mb-3 mb-md-0">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Driver</h5>
+          <p class="card-text">Please sign in as a driver</p>
+          <a href="#!" class="btn btn-primary">Sign In</a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">User</h5>
+          <p class="card-text">PLease sign in as a user</p>
+          <a href="#!" class="btn btn-primary">Sign In</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+{% endblock%}
