Installed pyrebase and configured to connecting to the app by consuming the firebase database API.

--- a/web_dashboard/static/css/aisa.css
+++ b/web_dashboard/static/css/aisa.css
@@ -91,7 +91,7 @@ table.dataTable thead .sorting_desc_disabled:before {
 }
 #user-title{
   margin-top: 5%;
-  text-align: center;
+  text-decoration: underline;
 }
 .th-sm{
   font-weight: bold;
