--- a/web_dashboard/templates/users.html
+++ b/web_dashboard/templates/users.html
@@ -35,14 +35,15 @@
       </div>
       <div class="container-fluid content">
         <div class="row ">
+          <div class="col-md-12 text-center">
+            <h3 class="font-weight-bold" id="user-title"> User-details</h3>
+          </div>          
           
-          <h3 class="font-weight-bold" id="user-title"> User-details</h3>
-          
-          <div id="table" class="table-editable">
+          <div id="table" class="table-editable table-responsive-sm">
             <span class="table-add float-right mb-3 mr-2"><a href="#!" class="text-success"><i
               class="fas fa-plus fa-2x" aria-hidden="true"></i></a></span>
 
-              <table id="usersData" class="table table-striped  table-responsive-sm table-bordered table-sm" cellspacing="0" width="100%">
+              <table id="usersData" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                   <thead>
                     <tr>
                       <th class="th-sm">First name
