--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -42,6 +42,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/js/mdb.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
     {% bootstrap_javascript %}
     {% endblock %}
 
