--- a/web_dashboard/templates/administrator.html
+++ b/web_dashboard/templates/administrator.html
@@ -35,6 +35,10 @@
       </div>
       <div class="container-fluid content">
         <div class="row">
+            <div>
+                {% csrf_token %}
+                Welcome {{email}}
+            </div>
             <div class="col-md-6 ">
                 <div class="admin-details">
                     <div class="card text-center admin">
