--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -8,6 +8,9 @@
             <li class="nav-item active">
                <a class="nav-link waves-effect waves-light" href="{% url 'dashboard'%}">Dashboard<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link waves-effect waves-light" href="{% url 'admin-signIn'%}">Account</a>
+            </li>
         
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
