--- a/web_dashboard/templates/signIn.html
+++ b/web_dashboard/templates/signIn.html
@@ -1,19 +1,80 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  {% if message %}
-    <script>
-      alert('{{message}}')
-    </script>
-  {% endif %}
+  <div class="wrapper d-flex">
+      <div class="sideMenu">
+          <div class="sidebar">
+              <ul class="navbar-nav">
+                  <li class="nav-item"><a href="{% url 'dashboard'%}" class="nav-link"><i class="fas fa-tachometer-alt" aria-hidden="true"></i>
+                      <span class="text">Dashboard</span>
+                  </a></li>
+                  <li class="nav-item"><a href="{% url 'admin-dash'%}" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
+                      <span class="text">Admin</span>
+                  </a></li>
+                  <li class="nav-item"><a href="{% url 'users'%}" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
+                      <span class="text">Users</span>
+                  </a></li>
+                  <li class="nav-item"><a href="{% url 'drivers'%}" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
+                      <span class="text">Drivers</span>
+                  </a></li>
+                  <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-suitcase" aria-hidden="true"></i>
+                      <span class="text">Trips</span>
+                  </a></li>
+                  <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chart-pie" aria-hidden="true"></i>
+                      <span class="text">Charts</span>
+                  </a></li>
+                  <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-star" aria-hidden="true"></i>
+                      <span class="text">Reviews</span>
+                  </a></li>
+                  <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-map-marked-alt"></i>
+                      <span class="text">Location Fare</span>
+                  </a></li>                
+              </ul>
+          </div>
+      </div>
+      <div class="container-fluid content">
+        <div class="row">
+            {% if message %}
+            <script>
+              alert('{{message}}')
+            </script>
+          {% endif %}
 
-  <form action="/postsign/" method="post">
-    {% csrf_token %}
-    Email :
-    <input type="email" name="email">
-    Password:
-    <input type="password" name="pass">
-    <input type="submit" value="SignIn">
-    </form>
+          <!-- Default form login -->
+          <form class="text-center border border-light p-5" action="{% url 'admin-welcome'%}" method="post">
+              {% csrf_token %}
+              <p class="h4 mb-4">Sign in</p>
+              <!-- Email -->
+              <input type="email" id="defaultLoginFormEmail" name="email" class="form-control mb-4" placeholder="E-mail">
+              <!-- Password -->
+              <input type="password" id="defaultLoginFormPassword" name="pass" class="form-control mb-4" placeholder="Password">
+
+              <div class="d-flex justify-content-around">
+                  <div>
+                      <!-- Remember me -->
+                      <div class="custom-control custom-checkbox">
+                          <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                          <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+                      </div>
+                  </div>
+                  <div>
+                      <!-- Forgot password -->
+                      <a href="">Forgot password?</a>
+                  </div>
+              </div>
+
+              <!-- Sign in button -->
+              <input class="btn btn-info btn-block my-4" type="submit" value="Sign In">
+
+              <!-- Register -->
+              <p>Not a member?
+                  <a href="">Register</a>
+              </p>
+
+          </form>
+          
+        </div>
+      </div>
+  </div>  
   
 {% endblock %}
