Added html table for drivers records. Styling of the drivers' page.

--- a/web_dashboard/templates/dashboard.html
+++ b/web_dashboard/templates/dashboard.html
@@ -44,7 +44,7 @@
                         <!--Card image-->
                         <div class="view">
                         <img src="/static/images/user-apartments.jpeg" class="card-img-top" alt="photo">
-                        <a href="#">
+                        <a href="{% url 'users'%}">
                             <div class="mask rgba-white-slight"></div>
                         </a>
                         </div>
@@ -71,7 +71,7 @@
                         <!--Card image-->
                         <div class="view">
                         <img src="/static/images/drivers.jpeg" class="card-img-top" alt="photo">
-                        <a href="#">
+                        <a href="{% url 'drivers'%}">
                             <div class="mask rgba-white-slight"></div>
                         </a>
                         </div>
