added a login form

--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -19,8 +19,8 @@
         </li>
       </ul>
       <span class="navbar-text white-text">
-        <a class="nav-link" style="color:white" href="#">Sign Up</a>
-        <a class="nav-link" style="color:white" href="#">Login</a>
+        <a class="nav-link" style="color:white" href="{% url 'web' %}">login</a>
+        <a class="nav-link" style="color:white" href="{% url 'postsign' %}">sign up</a>
       </span>
     </div>
   </nav>
