--- a/web/templates/welcome.html
+++ b/web/templates/welcome.html
@@ -1,7 +1,10 @@
 {% extends 'base.html'%}
 ​
 {% block content %}
-
+<div class="row">
+  {% csrf_token %}
+ Welcome {{e}}
+</div>
 
 <h1> Sign In</h1>
 <div class="row">
@@ -25,5 +28,6 @@
       </div>
     </div>
   </div>
+  
 
 {% endblock%}
