--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -22,22 +22,22 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-        
+            {% if user.is_authenticated%}
           <li class="nav-item">
-              <a class="nav-link waves-effect waves-light" href="" id="out">Logout</a>
+              <a class="nav-link waves-effect waves-light" href="{%url 'logout'%}" id="out">Logout</a>
           </li>
           <li class="nav-item" id="p-icon">
               <a class="nav-link waves-effect waves-light" href="" ><img src="https://img.icons8.com/material-rounded/24/000000/user.png" width="30"></a>
           </li>
-          
+          {%else%}
           <li class="nav-item">
-              <a class='btn btn-default' href="" id="in">Login</a>
+              <a class='btn btn-default' href="{% url 'admin-signIn'%}" id="in">Login</a>
           </li>
           
           <li class="nav-item">
               <a class="nav-link waves-effect waves-light" href="" id="signup">Sign Up</a>
           </li>
-                
+            {% endif %}  
         </ul>
     </div>
 </nav>
