Created a view function for adminsignup. Added form for the signup and configure database creation.

--- a/web_dashboard/templates/signIn.html
+++ b/web_dashboard/templates/signIn.html
@@ -67,8 +67,8 @@
               <input class="btn btn-info btn-block my-4" type="submit" value="Sign In">
 
               <!-- Register -->
-              <p>Not a member?
-                  <a href="">Register</a>
+              <p>Not an admin?
+                  <a href="{% url 'admin-signUp'%}">Register</a>
               </p>
 
           </form>
