--- a/web_dashboard/templates/signIn.html
+++ b/web_dashboard/templates/signIn.html
@@ -34,45 +34,50 @@
       </div>
       <div class="container-fluid content">
         <div class="row">
-            {% if message %}
-            <script>
-              alert('{{message}}')
-            </script>
-          {% endif %}
-
-          <!-- Default form login -->
-          <form class="text-center border border-light p-5" action="{% url 'admin-welcome'%}" method="post">
-              {% csrf_token %}
-              <p class="h4 mb-4">Sign in</p>
-              <!-- Email -->
-              <input type="email" id="defaultLoginFormEmail" name="email" class="form-control mb-4" placeholder="E-mail">
-              <!-- Password -->
-              <input type="password" id="defaultLoginFormPassword" name="pass" class="form-control mb-4" placeholder="Password">
-
-              <div class="d-flex justify-content-around">
-                  <div>
-                      <!-- Remember me -->
-                      <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                          <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                      </div>
-                  </div>
-                  <div>
-                      <!-- Forgot password -->
-                      <a href="">Forgot password?</a>
-                  </div>
-              </div>
-
-              <!-- Sign in button -->
-              <input class="btn btn-info btn-block my-4" type="submit" value="Sign In">
-
-              <!-- Register -->
-              <p>Not an admin?
-                  <a href="{% url 'admin-signUp'%}">Register</a>
-              </p>
-
-          </form>
-          
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                {% if message %}
+                <script>
+                    alert('{{message}}')
+                </script>
+                {% endif %}
+    
+                <!-- Default form login -->
+                <form class="text-center border border-light p-5 auth-form" action="{% url 'admin-welcome'%}" method="post">
+                    {% csrf_token %}
+                    <p class="h4 mb-4">Sign in</p>
+                    <!-- Email -->
+                    <input type="email" id="defaultLoginFormEmail" name="email" class="form-control mb-4" placeholder="E-mail">
+                    <!-- Password -->
+                    <input type="password" id="defaultLoginFormPassword" name="pass" class="form-control mb-4" placeholder="Password">
+    
+                    <div class="d-flex justify-content-around">
+                        <div>
+                            <!-- Remember me -->
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                                <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+                            </div>
+                        </div>
+                        <div>
+                            <!-- Forgot password -->
+                            <a href="">Forgot password?</a>
+                        </div>
+                    </div>
+    
+                    <!-- Sign in button -->
+                    <input class="btn btn-info btn-block my-4" type="submit" value="Sign In">
+    
+                    <!-- Register -->
+                    <p>Not an admin?
+                        <a href="{% url 'admin-signUp'%}">Register</a>
+                    </p>
+    
+                </form>
+                  
+            </div>
+            <div class="col-md-3"></div>
+            
         </div>
       </div>
   </div>  
