--- a/web_dashboard/static/css/aisa.css
+++ b/web_dashboard/static/css/aisa.css
@@ -100,6 +100,9 @@ table.dataTable thead .sorting_desc_disabled:before {
 .bottom-th{
   font-weight: bold;
 }
-.auth-form{
+.auth-form,.prof-form{
   margin-top: 10%;
+}
+.skip{
+  margin-bottom: 10%;
 }
