--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -27,7 +27,7 @@
               <a class="nav-link waves-effect waves-light" href="{%url 'logout'%}" id="out">Logout</a>
           </li>
           <li class="nav-item" id="p-icon">
-              <a class="nav-link waves-effect waves-light" href="" ><img src="https://img.icons8.com/material-rounded/24/000000/user.png" width="30"></a>
+              <a class="nav-link waves-effect waves-light" href="{%url 'prof-create'%}" ><img src="https://img.icons8.com/material-rounded/24/000000/user.png" width="30"></a>
           </li>
         
           <li class="nav-item">
