added a trips table

--- a/web/templates/welcome.html
+++ b/web/templates/welcome.html
@@ -13,7 +13,7 @@
         <div class="card-body">
           <h5 class="card-title">Driver</h5>
           <p class="card-text">Please sign in as a driver</p>
-          <a href="#!" class="btn btn-primary">Sign In</a>
+          <a href="/driverRegister/" class="btn btn-primary">Register</a>
         </div>
       </div>
     </div>
