--- a/web_dashboard/templates/drivers.html
+++ b/web_dashboard/templates/drivers.html
@@ -18,7 +18,7 @@
                   <li class="nav-item"><a href="{% url 'drivers'%}" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
                       <span class="text">Drivers</span>
                   </a></li>
-                  <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-suitcase" aria-hidden="true"></i>
+                  <li class="nav-item"><a href="{% url 'trips'%}" class="nav-link"><i class="fas fa-suitcase" aria-hidden="true"></i>
                       <span class="text">Trips</span>
                   </a></li>
                   <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chart-pie" aria-hidden="true"></i>
