--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -15,21 +15,22 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item waves-effect waves-light" href="#">Action</a>
-                    <a class="dropdown-item waves-effect waves-light" href="#">Another action</a>
-                    <a class="dropdown-item waves-effect waves-light" href="#">Something else here</a>
+                    <a class="dropdown-item waves-effect waves-light" href="{% url 'users'%}">Users</a>
+                    <a class="dropdown-item waves-effect waves-light" href="{% url 'drivers'%}">Drivers</a>
+                    <a class="dropdown-item waves-effect waves-light" href="{% url 'trips'%}">Trips</a>
+                    <a class="dropdown-item waves-effect waves-light" href="#">Reviews</a>
                 </div>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            
+            {% if auth_a %}
           <li class="nav-item">
               <a class="nav-link waves-effect waves-light" href="{%url 'logout'%}" id="out">Logout</a>
           </li>
           <li class="nav-item" id="p-icon">
-              <a class="nav-link waves-effect waves-light" href="{%url 'prof-create'%}" ><img src="https://img.icons8.com/material-rounded/24/000000/user.png" width="30"></a>
+              <a class="nav-link waves-effect waves-light" href="{%url 'prof-create'%}" ><i class="fas fa-user fa-2x"></i></a>
           </li>
-        
+        {%else%}
           <li class="nav-item">
               <a class='btn btn-default' href="{% url 'admin-signIn'%}" id="in">Login</a>
           </li>
@@ -37,7 +38,7 @@
           <li class="nav-item">
               <a class="nav-link waves-effect waves-light" href="{% url 'admin-signUp'%}" id="signup">Sign Up</a>
           </li>
-            
+           {% endif%} 
         </ul>
     </div>
 </nav>
