--- a/web_dashboard/templates/drivers.html
+++ b/web_dashboard/templates/drivers.html
@@ -66,11 +66,11 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td class="pt-3-half" contenteditable="true">Tiger </td>
-                      <td class="pt-3-half" contenteditable="true">Nixon</td>
-                      <td class="pt-3-half" contenteditable="true">System Architect</td>
-                      <td class="pt-3-half" contenteditable="true">Edinburgh</td>
-                      <td class="pt-3-half" contenteditable="true">61</td>
+                      <td class="pt-3-half" contenteditable="true">Peter</td>
+                      <td class="pt-3-half" contenteditable="true">Wachira</td>
+                      <td class="pt-3-half" contenteditable="true">peter@gmail.com</td>
+                      <td class="pt-3-half" contenteditable="true">0712345678</td>
+                      <td class="pt-3-half" contenteditable="true">Male</td>
                       <td class="pt-3-half" contenteditable="true">2011/04/25</td>
                       <td class="pt-3-half" contenteditable="true">$320,800</td>
                       <td class="pt-3-half">
@@ -85,11 +85,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="pt-3-half" contenteditable="true">Tiger Nixon</td>
-                      <td class="pt-3-half" contenteditable="true">Garrett Winters</td>
-                      <td class="pt-3-half" contenteditable="true">Accountant</td>
-                      <td class="pt-3-half" contenteditable="true">Tokyo</td>
-                      <td class="pt-3-half" contenteditable="true">63</td>
+                      <td class="pt-3-half" contenteditable="true">Lilian</td>
+                      <td class="pt-3-half" contenteditable="true">Murugi</td>
+                      <td class="pt-3-half" contenteditable="true">murugi@gmail.com</td>
+                      <td class="pt-3-half" contenteditable="true">0712345678</td>
+                      <td class="pt-3-half" contenteditable="true">Female</td>
                       <td class="pt-3-half" contenteditable="true">2011/07/25</td>
                       <td class="pt-3-half" contenteditable="true">$170,750</td>
                       <td class="pt-3-half">
@@ -104,11 +104,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="pt-3-half" contenteditable="true">Tiger Nixon</td>
-                      <td class="pt-3-half" contenteditable="true">Ashton Cox</td>
-                      <td class="pt-3-half" contenteditable="true">Junior Technical Author</td>
-                      <td class="pt-3-half" contenteditable="true">San Francisco</td>
-                      <td class="pt-3-half" contenteditable="true">66</td>
+                      <td class="pt-3-half" contenteditable="true">Eddy</td>
+                      <td class="pt-3-half" contenteditable="true">Yonnie</td>
+                      <td class="pt-3-half" contenteditable="true">Yonnie@gmail.com</td>
+                      <td class="pt-3-half" contenteditable="true">0712345678</td>
+                      <td class="pt-3-half" contenteditable="true">Male</td>
                       <td class="pt-3-half" contenteditable="true">2009/01/12</td>
                       <td class="pt-3-half" contenteditable="true">$86,000</td>
                       <td class="pt-3-half">
